[gd_scene load_steps=37 format=2]

[ext_resource path="res://source/scenes/interface/container_equipment.tscn" type="PackedScene" id=1]
[ext_resource path="res://source/scripts/interface/Hud.gd" type="Script" id=2]
[ext_resource path="res://assets/texture/interface/item/item_kon.png" type="Texture" id=3]
[ext_resource path="res://assets/texture/interface/hud/frame_generic_2.png" type="Texture" id=4]
[ext_resource path="res://assets/texture/interface/hud/slime.png" type="Texture" id=5]
[ext_resource path="res://assets/texture/interface/hud/frame_stats.png" type="Texture" id=6]
[ext_resource path="res://assets/resource/equipped.tres" type="Resource" id=7]
[ext_resource path="res://assets/texture/interface/item/item_map.png" type="Texture" id=8]
[ext_resource path="res://assets/texture/interface/item/item_interact.png" type="Texture" id=9]
[ext_resource path="res://assets/texture/interface/control/button_x.png" type="Texture" id=10]
[ext_resource path="res://assets/texture/interface/control/button_y.png" type="Texture" id=11]
[ext_resource path="res://assets/texture/interface/control/button_b.png" type="Texture" id=12]
[ext_resource path="res://assets/texture/interface/hud/clock_hand_temp.png" type="Texture" id=13]
[ext_resource path="res://source/scenes/interface/container.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/resource/pad_tools.tres" type="Resource" id=15]
[ext_resource path="res://assets/interface/font/nishiki_teki_50.tres" type="DynamicFont" id=16]
[ext_resource path="res://assets/texture/interface/hud/frame_generic.png" type="Texture" id=17]
[ext_resource path="res://assets/texture/interface/hud/shell_3.png" type="Texture" id=18]
[ext_resource path="res://assets/interface/font/mochi_pop_p_one_32.tres" type="DynamicFont" id=19]
[ext_resource path="res://assets/shader/color_editor.tres" type="Shader" id=20]
[ext_resource path="res://assets/texture/interface/hud/clock_temp.png" type="Texture" id=21]
[ext_resource path="res://assets/texture/interface/hud/clock_minute_hand_temp.png" type="Texture" id=22]
[ext_resource path="res://assets/texture/interface/control/temp_pad.png" type="Texture" id=23]
[ext_resource path="res://assets/interface/theme/menu.tres" type="Theme" id=24]
[ext_resource path="res://assets/texture/interface/hud/shell_stock_full.png" type="Texture" id=25]
[ext_resource path="res://assets/texture/interface/hud/camera_pan.png" type="Texture" id=26]
[ext_resource path="res://assets/texture/interface/hud/frame_tool.png" type="Texture" id=27]
[ext_resource path="res://source/scenes/interface/cursor_target.tscn" type="PackedScene" id=28]

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 20 )
shader_param/brightness = 0.0
shader_param/contrast = 2.0
shader_param/saturation = 7.0
shader_param/hue = 0.0
shader_param/redVal = 1.0
shader_param/greenVal = 1.0
shader_param/blueVal = 1.0
shader_param/tint_color = Color( 1, 0.447059, 0.756863, 1 )
shader_param/tint_effect_factor = 0.1

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 20 )
shader_param/brightness = 0.0
shader_param/contrast = 1.2
shader_param/saturation = 13.0
shader_param/hue = 0.22
shader_param/redVal = 1.0
shader_param/greenVal = 1.0
shader_param/blueVal = 1.0
shader_param/tint_color = Color( 0.478431, 0.854902, 1, 1 )
shader_param/tint_effect_factor = 0.1

[sub_resource type="Animation" id=10]
resource_name = "Appear"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Shell:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shell:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shell:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ Vector2( 100, 130 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "Disappear"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Shell:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1.5, 1.5 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 128 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shell:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.01, 0.09 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shell:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "RESET"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Shell:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1.5 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shell:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.01 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shell:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 20 )
shader_param/brightness = -0.15
shader_param/contrast = 1.3
shader_param/saturation = 13.0
shader_param/hue = 0.22
shader_param/redVal = 1.0
shader_param/greenVal = 1.0
shader_param/blueVal = 1.0
shader_param/tint_color = Color( 0.989777, 0.476563, 1, 1 )
shader_param/tint_effect_factor = 0.0

[sub_resource type="Animation" id=4]
resource_name = "RESET"

[sub_resource type="Animation" id=5]
resource_name = "SlideCam"
length = 0.7
step = 0.01

[node name="GuiHud" type="CanvasLayer"]
script = ExtResource( 2 )
equipment = ExtResource( 7 )
tools = ExtResource( 15 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.85, 0.85 )
mouse_filter = 1
custom_constants/margin_right = 0
custom_constants/margin_top = 30
custom_constants/margin_left = 40

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 40.0
margin_top = 30.0
margin_right = 364.0
margin_bottom = 350.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_bottom = 320.0
custom_constants/margin_right = -164
custom_constants/margin_top = 10

[node name="ShellStock" type="VBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer"]
margin_left = 58.0
margin_top = 10.0
margin_right = 106.0
margin_bottom = 306.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_constants/separation = -28

[node name="ShellStock1" type="TextureRect" parent="MarginContainer/HBoxContainer/MarginContainer/ShellStock" groups=["stock"]]
material = SubResource( 8 )
margin_right = 48.0
margin_bottom = 48.0
texture = ExtResource( 25 )

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/HBoxContainer/MarginContainer/ShellStock"]
margin_top = 20.0
margin_right = 48.0
margin_bottom = 276.0
custom_constants/margin_left = -34

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer/ShellStock/MarginContainer4"]
margin_left = -34.0
margin_right = 48.0
margin_bottom = 256.0
custom_constants/separation = -18

[node name="ShellStock2" type="TextureRect" parent="MarginContainer/HBoxContainer/MarginContainer/ShellStock/MarginContainer4/VBoxContainer" groups=["stock"]]
material = SubResource( 8 )
margin_right = 82.0
margin_bottom = 48.0
texture = ExtResource( 25 )

[node name="MarginContainer5" type="MarginContainer" parent="MarginContainer/HBoxContainer/MarginContainer/ShellStock/MarginContainer4/VBoxContainer"]
margin_top = 30.0
margin_right = 82.0
margin_bottom = 226.0
custom_constants/margin_left = -26

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer/ShellStock/MarginContainer4/VBoxContainer/MarginContainer5"]
margin_left = -26.0
margin_right = 82.0
margin_bottom = 196.0
custom_constants/separation = -12

[node name="ShellStock3" type="TextureRect" parent="MarginContainer/HBoxContainer/MarginContainer/ShellStock/MarginContainer4/VBoxContainer/MarginContainer5/VBoxContainer" groups=["stock"]]
material = SubResource( 8 )
margin_right = 108.0
margin_bottom = 48.0
texture = ExtResource( 25 )

[node name="MarginContainer6" type="MarginContainer" parent="MarginContainer/HBoxContainer/MarginContainer/ShellStock/MarginContainer4/VBoxContainer/MarginContainer5/VBoxContainer"]
margin_top = 36.0
margin_right = 108.0
margin_bottom = 160.0
custom_constants/margin_left = -16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer/ShellStock/MarginContainer4/VBoxContainer/MarginContainer5/VBoxContainer/MarginContainer6"]
margin_left = -16.0
margin_right = 108.0
margin_bottom = 124.0
custom_constants/separation = -10

[node name="ShellStock4" type="TextureRect" parent="MarginContainer/HBoxContainer/MarginContainer/ShellStock/MarginContainer4/VBoxContainer/MarginContainer5/VBoxContainer/MarginContainer6/VBoxContainer" groups=["stock"]]
material = SubResource( 8 )
margin_right = 124.0
margin_bottom = 48.0
texture = ExtResource( 25 )

[node name="MarginContainer7" type="MarginContainer" parent="MarginContainer/HBoxContainer/MarginContainer/ShellStock/MarginContainer4/VBoxContainer/MarginContainer5/VBoxContainer/MarginContainer6/VBoxContainer"]
margin_top = 38.0
margin_right = 124.0
margin_bottom = 86.0
custom_constants/margin_left = -6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer/ShellStock/MarginContainer4/VBoxContainer/MarginContainer5/VBoxContainer/MarginContainer6/VBoxContainer/MarginContainer7"]
margin_left = -6.0
margin_right = 124.0
margin_bottom = 48.0
custom_constants/separation = -10

[node name="ShellStock5" type="TextureRect" parent="MarginContainer/HBoxContainer/MarginContainer/ShellStock/MarginContainer4/VBoxContainer/MarginContainer5/VBoxContainer/MarginContainer6/VBoxContainer/MarginContainer7/VBoxContainer" groups=["stock"]]
material = SubResource( 8 )
margin_right = 130.0
margin_bottom = 48.0
texture = ExtResource( 25 )

[node name="ShellStock6" type="TextureRect" parent="MarginContainer/HBoxContainer/MarginContainer/ShellStock/MarginContainer4/VBoxContainer/MarginContainer5/VBoxContainer/MarginContainer6/VBoxContainer" groups=["stock"]]
material = SubResource( 8 )
margin_top = 76.0
margin_right = 124.0
margin_bottom = 124.0
texture = ExtResource( 25 )

[node name="ShellStock7" type="TextureRect" parent="MarginContainer/HBoxContainer/MarginContainer/ShellStock/MarginContainer4/VBoxContainer/MarginContainer5/VBoxContainer" groups=["stock"]]
material = SubResource( 8 )
margin_top = 148.0
margin_right = 108.0
margin_bottom = 196.0
texture = ExtResource( 25 )

[node name="ShellStock8" type="TextureRect" parent="MarginContainer/HBoxContainer/MarginContainer/ShellStock/MarginContainer4/VBoxContainer" groups=["stock"]]
material = SubResource( 8 )
margin_top = 208.0
margin_right = 82.0
margin_bottom = 256.0
texture = ExtResource( 25 )

[node name="ShellStock9" type="TextureRect" parent="MarginContainer/HBoxContainer/MarginContainer/ShellStock" groups=["stock"]]
material = SubResource( 8 )
margin_top = 248.0
margin_right = 48.0
margin_bottom = 296.0
texture = ExtResource( 25 )

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_left = 4.0
margin_right = 324.0
margin_bottom = 320.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 6 )

[node name="Shell" type="TextureRect" parent="MarginContainer/HBoxContainer/TextureRect"]
show_behind_parent = true
material = SubResource( 8 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 5120.0
margin_bottom = 5120.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 18 )

[node name="Slime" type="TextureRect" parent="MarginContainer/HBoxContainer/TextureRect"]
show_behind_parent = true
material = SubResource( 9 )
margin_right = 320.0
margin_bottom = 320.0
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer/HBoxContainer/TextureRect"]
anims/Appear = SubResource( 10 )
anims/Disappear = SubResource( 11 )
anims/RESET = SubResource( 12 )

[node name="FaceButtons" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1440.0
margin_right = 480.0
margin_bottom = 1080.0
rect_scale = Vector2( 0.75, 0.75 )
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/margin_right = -100
custom_constants/margin_top = -120
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="HBoxContainer" type="VBoxContainer" parent="FaceButtons"]
margin_top = -120.0
margin_right = 2020.0
margin_bottom = 1080.0

[node name="Container" type="MarginContainer" parent="FaceButtons/HBoxContainer"]
margin_left = 1330.0
margin_right = 2020.0
margin_bottom = 608.0
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="MarginBackground" type="MarginContainer" parent="FaceButtons/HBoxContainer/Container"]
margin_left = 146.0
margin_right = 690.0
margin_bottom = 608.0
size_flags_horizontal = 8
size_flags_vertical = 4
custom_constants/margin_right = 64
custom_constants/margin_top = 128

[node name="TextureRect" type="TextureRect" parent="FaceButtons/HBoxContainer/Container/MarginBackground"]
margin_top = 128.0
margin_right = 480.0
margin_bottom = 608.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 17 )
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="FaceButtons/HBoxContainer/Container/MarginBackground"]
margin_left = 80.0
margin_top = 208.0
margin_right = 400.0
margin_bottom = 528.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 4 )

[node name="MarginContainer2" type="MarginContainer" parent="FaceButtons/HBoxContainer/Container/MarginBackground"]
margin_top = 128.0
margin_right = 480.0
margin_bottom = 608.0
custom_constants/margin_right = 156
custom_constants/margin_top = 156
custom_constants/margin_left = 156
custom_constants/margin_bottom = 156

[node name="Button" type="TextureRect" parent="FaceButtons/HBoxContainer/Container/MarginBackground/MarginContainer2"]
margin_left = 226.0
margin_top = 226.0
margin_right = 324.0
margin_bottom = 324.0
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource( 10 )
stretch_mode = 3

[node name="Button3" type="TextureRect" parent="FaceButtons/HBoxContainer/Container/MarginBackground/MarginContainer2"]
margin_left = 156.0
margin_top = 156.0
margin_right = 254.0
margin_bottom = 254.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 11 )
stretch_mode = 3

[node name="MarginContainer3" type="MarginContainer" parent="FaceButtons/HBoxContainer/Container/MarginBackground"]
margin_top = 128.0
margin_right = 480.0
margin_bottom = 608.0
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100

[node name="ItemSprite" type="TextureRect" parent="FaceButtons/HBoxContainer/Container/MarginBackground/MarginContainer3"]
margin_left = 100.0
margin_top = 252.0
margin_right = 228.0
margin_bottom = 380.0
rect_min_size = Vector2( 128, 128 )
size_flags_horizontal = 0
size_flags_vertical = 8
texture = ExtResource( 9 )
stretch_mode = 6

[node name="ItemLabel" type="RichTextLabel" parent="FaceButtons/HBoxContainer/Container/MarginBackground/MarginContainer3/ItemSprite"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -64.0
margin_right = 64.0
margin_bottom = 64.0
rect_clip_content = false
custom_fonts/normal_font = ExtResource( 19 )
bbcode_enabled = true

[node name="ItemSprite2" type="TextureRect" parent="FaceButtons/HBoxContainer/Container/MarginBackground/MarginContainer3"]
margin_left = 252.0
margin_top = 100.0
margin_right = 380.0
margin_bottom = 228.0
rect_min_size = Vector2( 128, 128 )
size_flags_horizontal = 8
size_flags_vertical = 0
texture = ExtResource( 8 )
stretch_mode = 6

[node name="ItemLabel" type="RichTextLabel" parent="FaceButtons/HBoxContainer/Container/MarginBackground/MarginContainer3/ItemSprite2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -64.0
margin_right = 64.0
margin_bottom = 64.0
rect_clip_content = false
custom_fonts/normal_font = ExtResource( 19 )
bbcode_enabled = true

[node name="MarginContainer" type="MarginContainer" parent="FaceButtons/HBoxContainer/Container"]
margin_top = 144.0
margin_right = 690.0
margin_bottom = 464.0
size_flags_horizontal = 8
size_flags_vertical = 4
custom_constants/margin_right = 370

[node name="TextureRect" type="TextureRect" parent="FaceButtons/HBoxContainer/Container/MarginContainer"]
margin_right = 320.0
margin_bottom = 320.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 27 )

[node name="MarginContainer2" type="MarginContainer" parent="FaceButtons/HBoxContainer/Container/MarginContainer/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_left = -8
custom_constants/margin_bottom = 78

[node name="ToolSlot" parent="FaceButtons/HBoxContainer/Container/MarginContainer/TextureRect/MarginContainer2" groups=["hud_slot"] instance=ExtResource( 1 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 92.0
margin_top = 57.0
margin_right = 220.0
margin_bottom = 185.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="FaceButtons/HBoxContainer/Container/MarginContainer/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 148

[node name="Button2" type="TextureRect" parent="FaceButtons/HBoxContainer/Container/MarginContainer/TextureRect/MarginContainer"]
material = SubResource( 7 )
margin_left = 111.0
margin_top = 185.0
margin_right = 209.0
margin_bottom = 283.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 12 )
stretch_mode = 3

[node name="MarginCollected" type="MarginContainer" parent="FaceButtons/HBoxContainer"]
margin_left = 1651.0
margin_top = 612.0
margin_right = 2020.0
margin_bottom = 612.0
size_flags_horizontal = 8
size_flags_vertical = 0
custom_constants/margin_right = 170
custom_constants/margin_top = -96

[node name="HBoxContainer" type="HBoxContainer" parent="FaceButtons/HBoxContainer/MarginCollected"]
margin_top = -96.0
margin_right = 199.0
custom_constants/separation = 16

[node name="Label" type="Label" parent="FaceButtons/HBoxContainer/MarginCollected/HBoxContainer"]
margin_top = 21.0
margin_right = 87.0
margin_bottom = 74.0
size_flags_horizontal = 8
custom_fonts/font = ExtResource( 16 )
text = "000"

[node name="TextureRect" type="TextureRect" parent="FaceButtons/HBoxContainer/MarginCollected/HBoxContainer"]
margin_left = 103.0
margin_right = 199.0
margin_bottom = 96.0
size_flags_horizontal = 0
texture = ExtResource( 3 )

[node name="ToolPad" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -384.0
margin_right = 384.0
mouse_filter = 1
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="ToolPad"]
margin_right = 384.0
margin_bottom = 384.0
custom_constants/margin_right = 128
custom_constants/margin_top = 128
custom_constants/margin_left = 128
custom_constants/margin_bottom = 128

[node name="TextureRect" type="TextureRect" parent="ToolPad/MarginContainer"]
margin_left = 128.0
margin_top = 128.0
margin_right = 256.0
margin_bottom = 256.0
rect_pivot_offset = Vector2( 128, 128 )
texture = ExtResource( 23 )
stretch_mode = 6

[node name="ToolTop" type="MarginContainer" parent="ToolPad"]
margin_right = 384.0
margin_bottom = 384.0
custom_constants/margin_top = 128
custom_constants/margin_left = 192

[node name="ItemSlot1" parent="ToolPad/ToolTop" groups=["hud_slot"] instance=ExtResource( 14 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 192.0
margin_top = 128.0
margin_right = 192.0
margin_bottom = 128.0
grow_horizontal = 0

[node name="ToolRight" type="MarginContainer" parent="ToolPad"]
margin_right = 384.0
margin_bottom = 384.0
custom_constants/margin_top = 192
custom_constants/margin_left = 256

[node name="ItemSlot2" parent="ToolPad/ToolRight" groups=["hud_slot"] instance=ExtResource( 14 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 256.0
margin_top = 192.0
margin_right = 256.0
margin_bottom = 192.0

[node name="ToolBottom" type="MarginContainer" parent="ToolPad"]
margin_right = 384.0
margin_bottom = 384.0

[node name="ItemSlot3" parent="ToolPad/ToolBottom" groups=["hud_slot"] instance=ExtResource( 14 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0

[node name="ToolLeft" type="MarginContainer" parent="ToolPad"]
margin_right = 384.0
margin_bottom = 384.0
custom_constants/margin_top = 192
custom_constants/margin_left = 128

[node name="ItemSlot4" parent="ToolPad/ToolLeft" groups=["hud_slot"] instance=ExtResource( 14 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 128.0
margin_top = 192.0
margin_right = 128.0
margin_bottom = 192.0

[node name="CamMode" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1920.0
margin_top = 696.0
margin_right = 2112.0
margin_bottom = 888.0
mouse_filter = 1
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="CamIcon" type="TextureRect" parent="CamMode"]
unique_name_in_owner = true
margin_right = 192.0
margin_bottom = 192.0
texture = ExtResource( 26 )

[node name="Clock" type="MarginContainer" parent="."]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -384.0
margin_right = 384.0
mouse_filter = 1
custom_constants/margin_right = 64
custom_constants/margin_top = 64
custom_constants/margin_left = 64
custom_constants/margin_bottom = 64

[node name="TextureRect" type="TextureRect" parent="Clock"]
margin_left = 64.0
margin_top = 64.0
margin_right = 320.0
margin_bottom = 320.0
rect_pivot_offset = Vector2( 128, 128 )
texture = ExtResource( 21 )
stretch_mode = 6

[node name="MinuteHand" type="TextureRect" parent="Clock"]
margin_left = 64.0
margin_top = 64.0
margin_right = 320.0
margin_bottom = 320.0
rect_pivot_offset = Vector2( 128, 128 )
size_flags_vertical = 0
texture = ExtResource( 22 )
stretch_mode = 6

[node name="HourHand" type="TextureRect" parent="Clock"]
margin_left = 64.0
margin_top = 64.0
margin_right = 320.0
margin_bottom = 320.0
rect_pivot_offset = Vector2( 128, 128 )
size_flags_vertical = 0
texture = ExtResource( 13 )
stretch_mode = 6

[node name="Tween" type="Tween" parent="Clock"]

[node name="AnimationCam" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/SlideCam = SubResource( 5 )

[node name="DisplayBoost" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -412.0
margin_top = -138.0
margin_right = 410.0
mouse_filter = 1

[node name="InteractionLabel" type="RichTextLabel" parent="."]
anchor_left = 0.4
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -131.0
grow_horizontal = 2
grow_vertical = 2
rect_clip_content = false
mouse_filter = 1
theme = ExtResource( 24 )
bbcode_enabled = true
bbcode_text = "Press A to Interact"
text = "Press A to Interact"
scroll_active = false

[node name="CursorTarget" parent="." instance=ExtResource( 28 )]
